crates/rome_js_formatter/tests/specs/prettier/js/bind-expressions/long_name_method.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
---

# Input

```js
class X {
  constructor() {
    this.testLongNameMethodAndSomethingElseLallala = ::this.testLongNameMethodAndSomethingElseLallala;
  }
  
  testLongNameMethodAndSomethingElseLallala() {
    return true;
  }
}```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,7 +1,7 @@
 class X {
   constructor() {
     this.testLongNameMethodAndSomethingElseLallala =
-      ::this.testLongNameMethodAndSomethingElseLallala;
+    ::this.testLongNameMethodAndSomethingElseLallala
   }
 
   testLongNameMethodAndSomethingElseLallala() {
```

# Output

```js
class X {
  constructor() {
    this.testLongNameMethodAndSomethingElseLallala =
    ::this.testLongNameMethodAndSomethingElseLallala
  }

  testLongNameMethodAndSomethingElseLallala() {
    return true;
  }
}
```


# Errors
```
error[SyntaxError]: expected an expression, or an assignment but instead found ':'
  ┌─ long_name_method.js:3:54
  │
3 │     this.testLongNameMethodAndSomethingElseLallala = ::this.testLongNameMethodAndSomethingElseLallala;
  │                                                      ^ Expected an expression, or an assignment here


```


